syntax = "proto3";

option go_package = "github.com/t10471/go-examples/grpc-examples/go/proto";

package greet;

message Greeting {
  string first_name = 1;
  string last_name = 2;
}

message GreetManyTimesRequest {
  Greeting greeting = 1;
}

message GreetManytimesResponse {
  string result = 1;
}

message LongGreetRequest {
  Greeting greeting = 1;
}

message LongGreetResponse {
  string result = 1;
}

message GreetEveryoneRequest {
  Greeting greeting = 1;
}

message GreetEveryoneResponse {
  string result = 1;
}

service GreetService{
  // Server Streaming
  rpc GreetManyTimes(GreetManyTimesRequest) returns (stream GreetManytimesResponse) {};

  // Client Streaming
  rpc LongGreet(stream LongGreetRequest) returns (LongGreetResponse) {};

  // Bi Directional Streaming
  rpc GreetEveryone(stream GreetEveryoneRequest) returns (stream GreetEveryoneResponse) {};
}